cleaned repetative css, fixed height and overflow

--- a/client/src/components/Osu/OsuUserProfile.css
+++ b/client/src/components/Osu/OsuUserProfile.css
@@ -1,22 +1,31 @@
 .osu-user-profile__div {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    border: 2px white solid;
-    gap: 3%;
-    overflow-y: scroll;
-    padding-bottom: 5%;
+    justify-content: space-between;
+    padding-left: 2%;
+    padding-right: 2%;
+
+    height: fit-content;
+
+
+
+    /* delete this padding 50% was using as testing to make */
+    /* Sure that scrolling is working as intended. */
+    padding-bottom: 50%;
 }
 
 .osu-user-profile__user-info-section {
     display: flex;
-    width: 30%;
+    flex-direction: column;
     align-items: center;
+
+    width: 30%;
+    gap: 20px;
+
     padding-top: 2%;
     padding-bottom: 2%;
-    flex-direction: column;
+
     background-color: rgb(29, 29, 29);
-    gap: 5%;
 }
 
 .osu-user-profile__user-info-profile {
@@ -74,12 +83,12 @@
 .osu-user-profile__user-info__time-played {
     display: flex;
     flex-direction: column;
-    gap: 10px;
     text-align: center;
+
+    gap: 10px;
 }
 .osu-user-profile__user-plays {
     display: flex;
     background-color: rgb(29, 29, 29);
     width: 65%;
-    /* height: fit-content; */
 }
